[package]
name = "maelbreaker"
authors = ["Rafael Bayer"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rafibayer/maelbreaker/"

[dependencies]
anyhow = "1.0.70"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
parking_lot = "0.12.1"



